tests/ui/typeck/conversion/implicit_conversion_error_to_bytes4_function_argument.sol
//@compile-flags: -Ztypeck
interface MyInterface {
    error MyCustomError(uint256, bool);
}

contract MyContract {
    function f(bytes4 arg) public {}
    function test() public {
        f(MyInterface.MyCustomError); //~ ERROR: not yet implemented
    }
}
